# rednote-mcp

./: README.md  README_CN.md  pyproject.toml
src/rednote_mcp/: server.py
src/rednote_mcp/auth/: auth_manager.py  cookie_manager.py
src/rednote_mcp/tools/: note_detail.py  rednote_tools.py  trending.py  user_profile.py
src/rednote_mcp/utils/: logger.py
