[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rednote-mcp"
version = "0.1.0"
description = "A Python MCP server for RedNote (小红书/Xiaohongshu)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["rednote", "xiaohongshu", "xhs", "mcp", "model-context-protocol"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "playwright>=1.42.0",
    "playwright-stealth>=2.0.0",
]

[project.scripts]
rednote-mcp = "rednote_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rednote_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
